commit de guaddado

--- a/.ENV
+++ b/.ENV
@@ -1,3 +1,4 @@
+ARCHIVOS=scotiabank_wm_callback_to_vm.csv,scotiabank_wm_response_to_vm.csv,scotiabank_wm_invitations_to_vm.csv,scotiabank_b2b_callback_to_vm.csv,scotiabank_b2b_digital_inline_to_vm.csv,scotiabank_b2b_responses_to_vm.csv,scotiabank_b2b_invitations_to_vm.csv,scotiabank_cpulse_response_to_vm.csv,scotiabank_cpulse_invitations_to_vm.csv,scotiabank_optout_to_vm.csv,sb_insurance_cardif_callback_to_vm.csv,sb_insurance_cardif_Invitations_to_vm.csv,sb_insurance_cardif_responses_to_vm.csv
 DB_HOST=localhost
 DB_PORT=1433
 DB_NAME=NPS
